Neue_ tryout - Arbeit mit JAXB Klassen, die aus xml -> xsd erzeugt worden sind. Erstelle xml mit Änderungen Erstelle die HTML Datei per xslt aus xml
Signed-off-by: firak01 <firak01@t-online.de>

--- a/JAZLanguageMarkup/.settings/org.eclipse.wst.common.component
+++ b/JAZLanguageMarkup/.settings/org.eclipse.wst.common.component
@@ -2,5 +2,6 @@
     <wb-module deploy-name="JAZLanguageMarkup">
         <wb-resource deploy-path="/" source-path="/src"/>
         <wb-resource deploy-path="/" source-path="/test"/>
+        <wb-resource deploy-path="/" source-path="/tryout"/>
     </wb-module>
 </project-modules>
